# backend/src/routes/customerRoutes.js
@@ -3,7 +3,6 @@ const router = express.Router();
 
 const customer = require('../controllers/customer.js');
 
-router.get('/:googleID', customer.getCustomer);
 router.post('/:googleID', customer.createCustomer);
 
 module.exports = router;
